<resources>
    <string name="app_name">ChildMonitoringApp</string>
    <string name="login">Login</string>
    <string name="password">password\n</string>
    <string name="email">email</string>
    <string name="register">register\n</string>
    <string name="Register">Register\n</string>
    <string name="click_to_login">click_to_login</string>
    <string name="click_here_to_register">click_here_to_register</string>
    <string name="logout">logout</string>
    <string name="child_link_msg">Your child is linked successfully.</string>
    <string name="continue_txt">Continue</string>
    <string name="setup_later">Set Up Later</string>
    <string name="done">Done</string>
    <string name="location">Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_kids_location">KidsLocationActivity</string>
</resources>